--- a/src/package.json
+++ b/src/package.json
@@ -4,14 +4,18 @@
   "description": "Wiki engine",
   "main": "server.js",
   "dependencies": {
+    "arraywrap": "^1.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
     "date-and-time": "^1.0.1",
     "diff": "^5.0.0",
     "diff2html": "^3.4.7",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "express-session-sequelize": "^2.3.0",
+    "ip-range-check": "^0.2.0",
     "multer": "^1.4.2",
     "sanitize-html": "^2.4.0",
     "sequelize": "^6.6.4",
